--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
 name: Your New Jekyll Site
 markdown: redcarpet
 pygments: true
-url: http://localhost:9000
+url: http://actuatedfutures.github.io/actuatedfutures.com
