--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,9 @@
 {
-    "name": "package",
-    "version": "0.0.0",
-    "dependencies":
-    {}
+  "name": "package",
+  "version": "0.0.0",
+  "dependencies": {
+    "jquery": "~2.0.3",
+    "normalize-css": "~2.1.3",
+    "inuit.css": "~5.0.0"
+  }
 }
