big update, lots of stuff changed.

--- a/_data/team.yml
+++ b/_data/team.yml
@@ -27,5 +27,5 @@
 - name: Tom Morgan
   twitter: morganesque
   image: "http://placekitten.com/201/201"
-  bio: "Tom is a quite good interaction designer and front-end developer. He's been designing and building things for the web since the turn of the century and is a passionate advocate of user-centered, iterative design practises and more recently responsive web design."
+  bio: "Tom is a quite good interaction designer and front-end developer. He's been designing and building things for the web since the turn of the century and is a  advocate of user-centered, iterative design practises and a huge fan of responsive web design."
   link: "http://morganesque.com/"
