--- a/_data/team.yml
+++ b/_data/team.yml
@@ -1,31 +1,32 @@
 - name: Paul Connel
   twitter: apulc
-  image: "http://placekitten.com/200/200"
-  bio: "This is my <i>bio</i> which is a paragraph of information about which I don't know nothing mistker banks."
+  image: "http://placehold.it/270x270"
+  link: "http://www.linkedin.com/in/paulcconnell"
+  bio: "Paul is a founding partner of Actuated Futures combining his expertise in Innovation, Energy &amp; Technology within the context of Cities &amp; Urbanism, with the award wining developments of CITU.  For the last four years he has been working in the cross-cutting areas of Digital Urban Futures, Sustainable Cities and Energy at a Neighbourhood Scale.  Before that Paul was a Director at a global Environmental &amp; Energy Services Consultancy."
 
 - name: Chris Thompson
   twitter: christom
-  image: "http://placekitten.com/230/230"
+  image: "http://placehold.it/230x230"
   bio: "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed venenatis auctor feugiat. Maecenas imperdietnuncquis nisi eleifend, ut scelerisque turpis laoreet."
 
 - name: Matt Edgar
   twitter: mattedgar
-  image: "http://placekitten.com/250/250"
+  image: "http://placehold.it/250x250"
   bio: "Matt is a consultant in service design, innovation and product management. For more than 15 years he worked in product strategy and design leadership in the amazing world of web and mobile media. Before that he was a newspaper journalist and history student."
   link: "http://mattedgar.com/"
 
 - name: Fraser Stride
   twitter: fraserstride
-  image: "http://placekitten.com/270/270"
+  image: "http://placehold.it/270x270"
   bio: "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed venenatis auctor feugiat. Maecenas imperdietnuncquis nisi eleifend, ut scelerisque turpis laoreet."
 
 - name: Phil Jefferies
   twitter: fraserstride
-  image: "http://placekitten.com/203/203"
+  image: "http://placehold.it/203x203"
   bio: "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed venenatis auctor feugiat. Maecenas imperdietnuncquis nisi eleifend, ut scelerisque turpis laoreet."
 
 - name: Tom Morgan
   twitter: morganesque
   image: "../img/tom.jpg"
-  bio: "Tom is a quite good interaction designer and front-end developer. He's been designing and building things for the web since the turn of the century and is a  advocate of user-centered, iterative design practises and a huge fan of responsive web design."
+  bio: "Tom is an interaction designer &amp; front-end developer. He's been designing and building things for the web since the turn of the century and is a  advocate of user-centered, iterative design practises and right now a huge fan of responsive web design."
   link: "http://morganesque.com/"
