--- a/_data/team.yml
+++ b/_data/team.yml
@@ -1,4 +1,4 @@
-- name: Paul Connel
+- name: Paul Connell
   twitter: apulc
   image: "../img/paul.jpg"
   link: "http://www.linkedin.com/in/paulcconnell"
