--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 name: Your New Jekyll Site
 markdown: redcarpet
 pygments: true
-url: http://actuatedfutures.github.io/actuatedfutures.com
+url: /actuatedfutures.com
 navigation:
 - text: about
   url: /
