--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 name: Actuated Futures
 markdown: redcarpet
 pygments: true
-url: ""
+url: "/actuatedfutures.com"
 navigation:
 - text: about
   url: /
