added Fraser's bio and a new blog post about him speaking in Amsterdam.

--- a/_data/team.yml
+++ b/_data/team.yml
@@ -18,7 +18,8 @@
 - name: Fraser Stride
   twitter: fraserstride
   image: "../img/fraser.jpg"
-  bio: "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed venenatis auctor feugiat. Maecenas imperdietnuncquis nisi eleifend, ut scelerisque turpis laoreet."
+  bio: "Fraser is a partner of Citu, Actuated Futures' co-founding partner. At Citu, Fraser was responsible for the technology implementation at it's ground breaking Greenhouse development, featuring a MUSCO district energy system with tenant billing, energy management and monitoring. Prior to Citu, Fraser was a Director at Finite Solutions, the award winning high-end home technology company and served on the board at CEDIA (Custom Electronics Design and Installation Association). Fraser is FD at Citu and bring a wealth of financial, technology and property experience to the table."
+  link: "http://www.linkedin.com/in/fraserstride"
 
 - name: Phil Jefferies
   twitter: fraserstride
