Removed the extra line that was needed before.

--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 name: Actuated Futures
 markdown: redcarpet
 pygments: true
-url: "/actuatedfutures.com"
+url: ""
 navigation:
 - text: about
   url: /
