removed fraser and replaced with Citu.

--- a/_data/team.yml
+++ b/_data/team.yml
@@ -10,11 +10,10 @@
   bio: "Matt is a consultant in service design, innovation and product management. For more than 15 years he worked in product strategy and design leadership in the amazing world of web and mobile media. Before that he was a newspaper journalist and history student."
   link: "http://mattedgar.com/"
 
-- name: Fraser Stride
-  twitter: fraserstride
+- name: Citu
+  twitter: cituuk
   image: "../img/fraser.jpg"
-  bio: "Fraser is a partner of Citu, Actuated Futures' co-founding partner. At Citu, Fraser was responsible for the technology implementation at it's ground breaking Greenhouse development, featuring a MUSCO district energy system with tenant billing, energy management and monitoring. Prior to Citu, Fraser was a Director at Finite Solutions, the award winning high-end home technology company and served on the board at CEDIA (Custom Electronics Design and Installation Association)."
-  link: "http://www.linkedin.com/in/fraserstride"
+  bio: "Citu is co-founding partner of Actuated Futures. Citu builds sustainable, mixed-use developments that are digitally enabled by the Actuate digital service. It has delivered over £40m of projects including the pioneering, low carbon Greenhouse. It has won 25+ awards including 2010 UK Green Building Council award for Best Refurbished Building."
 
 - name: Phil Jefferies
   twitter: fraserstride
