Changed frasers pictures to a Greenhouse one.

--- a/_data/team.yml
+++ b/_data/team.yml
@@ -12,7 +12,7 @@
 
 - name: Citu
   twitter: cituuk
-  image: "../img/fraser.jpg"
+  image: "../img/greenhouse.jpg"
   bio: "Citu is co-founding partner of Actuated Futures. Citu builds sustainable, mixed-use developments that are digitally enabled by the Actuate digital service. It has delivered over £40m of projects including the pioneering, low carbon Greenhouse. It has won 25+ awards including 2010 UK Green Building Council award for Best Refurbished Building."
 
 - name: Phil Jefferies
